# sentient

backend/: backend.py  pyproject.toml
voice/: pubspec.yaml
voice/android/app/: build.gradle
voice/backend/: backend.py  test.py
voice/lib/: custom_recording_button.dart  custom_recording_wave_widget.dart  main.dart  recording_screen.dart
