[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faster>=0.1.11",
    "faster-whisper>=1.1.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "huggingface-hub[hf-xet]>=0.30.2",
    "mem0ai>=0.1.92",
    "openai>=1.75.0",
    "whisper>=1.1.10",
]
